--- a/index.html
+++ b/index.html
@@ -1,146 +1,121 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko-KR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>콜라 자판기</title>
+    <link rel="stylesheet" href="./common.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>밴딩머신</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./common.css">
-    <link rel="stylesheet" href="./style.css">
-</head>
+  <body>
+    <h1><img src="./img/cola-logo.svg" alt="cola cola" /></h1>
 
-<body>
-    <header>
-        <h1>
-            <a href="#">
-                <img src="./img/Group.svg" alt="">
-            </a>
-        </h1>
-
-    </header>
     <main>
-        <section class="vanding">
-            <div class="menu">
-                <button class="item">
-                    <img src="./img/콜라.svg" alt="">
-                    <p class="name">Original_Cola</p>
-                    <p class="price">1000원</p>
-                </button>
-                <button class="item">
-                    <img src="./img/보라콜라.svg" alt="">
-                    <p class="name">Violet_Cola</p>
-                    <p class="price">1000원</p>
-                    <div class="soldout"><img src="./img/품절.svg" alt=""></div>
-                </button>
-                <button class="item">
-                    <img src="./img/노란콜라.svg" alt="">
-                    <p class="name">Yellow_Cola</p>
-                    <p class="price">1000원</p>
-                </button>
-                <button class="item">
-                    <img src="./img/파란콜라.svg" alt="">
-                    <p class="name">Cool_Cola</p>
-                    <p class="price">1000원</p>
-                </button>
-                <button class="item">
-                    <img src="./img/초록콜라.svg" alt="">
-                    <p class="name">Green_Cola</p>
-                    <p class="price">1000원</p>
-                </button>
-                <button class="item">
-                    <img src="./img/주황콜라.svg" alt="">
-                    <p class="name">Orange_Cola</p>
-                    <p class="price">1000원</p>
-                </button>
-            </div>
-            <div class="setting">
-                <div class="money">
-                    <p class="text">잔액 :</p>
-                    <p class="amount">1,000 원</p>
-                </div>
-                <button class="return">거스름 돈 반환</button>
-                <form><label for="enter-price"></label>
-                    <input id="enter-price" type="text" placeholder="입금액 입력">
-                </form>
-                <button class="deposit">입금</button>
+      <section class="section1">
+        <h2 class="a11y-hidden">판매 음료</h2>
+        <ul class="cola-list">
+          <!-- <li>
+          <button disabled class="btn-cola" type="button">
+            <img class="cola-img" src="./img/cola-violet.png" alt="">
+            <span class="cola-name">Violet_Cola</span>
+            <strong class="cola-price">1000원</strong>
+            <strong class="soldout">
+              <span>품절</span>
+            </strong>
+          </button>
+        </li> -->
+        </ul>
+        <div class="container">
+          <div class="bg-box">
+            <h2 class="title">잔액</h2>
+            <p></p>
+          </div>
+          <button class="btn" type="button">거스름돈 반환</button>
 
-                <div class="cart">
-                    <article>
-                        <img src="./img/콜라.svg" alt="">
-                        <p class="item">Original_Cola</p>
-                        <div class="count">1</div>
-                    </article>
-                    <article>
-                        <img src="./img/초록콜라.svg" alt="">
-                        <p class="item">Green_Cola</p>
-                        <div class="count">2</div>
-                    </article>
-                    <article>
-                        <img src="./img/주황콜라.svg" alt="">
-                        <p class="item">Orange_Cola</p>
-                        <div class="count">1</div>
-                    </article>
-                    <article>
-                        <img src="./img/보라콜라.svg" alt="">
-                        <p class="item">Violet_Cola</p>
-                        <div class="count">5</div>
-                    </article>
-                    <article>
-                        <img src="./img/노란콜라.svg" alt="">
-                        <p class="item">Yellow_Cola</p>
-                        <div class="count">3</div>
-                    </article>
+          <label for="input-money" class="a11y-hidden"
+            >금액 투입(단위:원)</label
+          >
+          <input
+            id="input-money"
+            value="10000"
+            min="1000"
+            step="1000"
+            type="number"
+            placeholder="입금액 입력"
+          />
+          <button class="btn" type="button">입금</button>
 
-                </div>
-                <button class="get">획득 </button>
-            </div>
+          <h2 class="a11y-hidden">장바구니</h2>
+          <ul class="get-list">
+            <!-- <li>
+            <img src="./img/cola-original.png" alt="">
+            Original_Cola
+            <strong>1
+              <span class="a11y-hidden">개</span>
+            </strong>
+          </li>
+          <li>
+            <img src="./img/cola-green.png" alt="">
+            Green_Cola
+            <strong>2
+              <span class="a11y-hidden">개</span>
+            </strong>
+          </li> -->
+          </ul>
+          <button class="btn-get" type="button">획득</button>
+        </div>
+      </section>
 
-        </section>
-        <section class="total">
-            <div class="box1">
-                <div class="money">
-                    <p class="text">소지금 :</p>
-                    <p class="amount">25,000 원</p>
-                </div>
-            </div>
-            <div class="box2">
-                <h2>획득한 음료</h2>
-                <div class="cart">
-                    <article>
-                        <img src="./img/콜라.svg" alt="">
-                        <p class="item">Original_Cola</p>
-                        <div class="count">1</div>
-                    </article>
-                    <article>
-                        <img src="./img/초록콜라.svg" alt="">
-                        <p class="item">Green_Cola</p>
-                        <div class="count">2</div>
-                    </article>
-                    <article>
-                        <img src="./img/주황콜라.svg" alt="">
-                        <p class="item">Orange_Cola</p>
-                        <div class="count">1</div>
-                    </article>
-                    <article>
-                        <img src="./img/보라콜라.svg" alt="">
-                        <p class="item">Violet_Cola</p>
-                        <div class="count">5</div>
-                    </article>
-                    <article>
-                        <img src="./img/노란콜라.svg" alt="">
-                        <p class="item">Yellow_Cola</p>
-                        <div class="count">3</div>
-                    </article>
-
-                </div>
-                <p class="total-price">총금액 : 9,000 원</p>
-            </div>
-        </section>
+      <section class="section2">
+        <div class="bg-box">
+          <h2 class="title">소지금</h2>
+          <p><strong>50,000원</strong></p>
+        </div>
+      </section>
+      <section class="section3">
+        <h2 class="get-title">획득한 음료</h2>
+        <ul class="get-list">
+          <!-- <li>
+          <img src="./img/cola-original.png" alt="">
+          Original_Cola
+          <strong>1
+            <span class="a11y-hidden">개</span>
+          </strong>
+        </li>
+        <li>
+          <img src="./img/cola-green.png" alt="">
+          Green_Cola
+          <strong>2
+            <span class="a11y-hidden">개</span>
+          </strong>
+        </li>
+        <li>
+          <img src="./img/cola-orange.png" alt="">
+          Orange_Cola
+          <strong>1
+            <span class="a11y-hidden">개</span>
+          </strong>
+        </li>
+        <li>
+          <img src="./img/cola-violet.png" alt="">
+          Violet_Cola
+          <strong>5
+            <span class="a11y-hidden">개</span>
+          </strong>
+        </li> -->
+        </ul>
+        <p class="total-price">총금액 : 원</p>
+      </section>
     </main>
-</body>
 
+    <script type="module" src="js/index.js"></script>
+  </body>
 </html>
